Add support for email alerts when logging errors and warnings.
Add support for email alerts to logging with multiple config profiles
(TEST, PROD). Change double quotes to single quotes.

--- a/Scripts/ArcGIS/10.0/Config/Logging.config
+++ b/Scripts/ArcGIS/10.0/Config/Logging.config
@@ -1,8 +1,8 @@
 [loggers]
-keys=root,customLogger
+keys=root,prodLogger,defaultLogger
 
 [handlers]
-keys=consoleHandler
+keys=consoleHandler,errorEmailHandler,warningEmailHandler
 
 [formatters]
 keys=customFormatter
@@ -11,10 +11,16 @@ keys=customFormatter
 level=NOTSET
 handlers=consoleHandler
 
-[logger_customLogger]
+[logger_defaultLogger]
 level=DEBUG
 handlers=consoleHandler
-qualname=CustomLogger
+qualname=DefaultLogger
+propagate=0
+
+[logger_prodLogger]
+level=DEBUG
+handlers=consoleHandler,errorEmailHandler,warningEmailHandler
+qualname=ProdLogger
 propagate=0
 
 [handler_consoleHandler]
@@ -22,6 +28,18 @@ class=StreamHandler
 level=DEBUG
 formatter=customFormatter
 args=(sys.stdout,)
+
+[handler_errorEmailHandler]
+class=handlers.SMTPHandler
+level=ERROR
+formatter=customFormatter
+args=('mailserver','from@your.org', ['to.you.org'], 'Error Publishing Open Dataset')
+
+[handler_warningEmailHandler]
+class=handlers.SMTPHandler
+level=WARN
+formatter=customFormatter
+args=('mailserver','from@your.org', ['to.you.org'], 'Problem Publishing Open Dataset')
 
 [formatter_customFormatter]
 format=%(asctime)s: %(name)s - %(levelname)-7s - %(message)s
